add Dto and Mapper, refacto tests, still some test don't pass